# Code_Script

Basic_calculator/: basic_calculator.py
C/: Expense_tracker.c
C++/pathfinding_visualizer/: .gitignore  CMakeLists.txt  README.md
C++/pathfinding_visualizer/include/: Grid.hpp  MainWindow.hpp  Node.hpp
C++/pathfinding_visualizer/include/Algorithms/: AlgorithmWorker.hpp
C++/pathfinding_visualizer/src/: Grid.cpp  MainWindow.cpp  Node.cpp  main.cpp
C++/pathfinding_visualizer/src/Algorithms/: AlgorithmWorker.cpp
C++/pathfinding_visualizer/ui/: MainWindow.ui
C/Expense_Tracker/: Expense-tracker.c  Readme.md
Javascript/Bmi calculator/: README.md  index.html  script.js
Javascript/LeetCodeStats/: readme.md
Javascript/color_memory_game/: index.html  readme.md  script.js  style.css
Javascript/flip a coin/: README.md  index.html  script.js  style.css
Python/: README.md  exif_data_viewer.py  password_generator.py
Python/temp_file_cleaner/: README.md  temp_file_cleaner.py
Python/web_scraper/: README.md  web_scraper.py
Python/website_status_checker/: README.md  website_status_checker.py
